--- a/force-app/main/default/classes/FeatureFlags.cls
+++ b/force-app/main/default/classes/FeatureFlags.cls
@@ -10,6 +10,7 @@ public with sharing class FeatureFlags implements IFeatureFlags {
         customPermissionNames = provider.getCustomPermissionNames();
     }
 
+    //new comment
     public FeatureFlags(){
         this(new FeatureFlagProvider());
     }
